--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,6 @@ nav ul{
     justify-content: center;
     
 }
-
 .slider-zap{
     width: 10px;
     height: 10px;
@@ -238,5 +237,59 @@ nav ul{
     color: #000;
     text-decoration: underline;
 }
-
+/*Banners*/
+.banner{
+    width: 100%;
+    display: block;
+    margin-top: 40px;
+}
+.banner div{
+    margin-left: 50px;
+}
+.banner img{
+    margin: 0 auto;
+    width: 47%;
+    margin-right: 25px;
+}
 /*    border: 3px solid saddlebrown;*/
+/*Marcas*/
+.slider-marcas{
+    width: 92%;
+    margin: auto;
+    overflow: hidden;
+}
+.slider_images_marcas{
+    height: 120px;
+    top: 20px;
+    position: relative;
+    left: 0px;
+    transition: all .5s;
+
+}
+.slider_navigation_marcas{
+    position: relative;
+    bottom: 25px;
+    height: 20px;
+    width: 10%;
+    margin: 1em auto;
+    display: flex;
+    justify-content: center;
+}
+
+.slider-nav-marcas{
+    width: 10px;
+    height: 10px;
+    margin-left: 5px;
+    background: #D6D6D6 ;
+    border-radius: 50%;
+}
+.slider-nav-marcas:hover{
+    background-color: #000;
+}
+.slider-nav-marcas-active{
+    background-color: #000;
+}
+.slider_img_marcas{
+    padding: 20px 20px;
+    margin-left: 20px;
+}
