--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 *{
     padding: 0px;
     margin: 0px;
@@ -203,7 +202,7 @@ h1{
 }
 .slider_zapatillas{
     height: 20px;
-    width: 100%;
+    width: fit-content;
     margin: 1em auto;
     display: flex;
     justify-content: center;
@@ -238,16 +237,15 @@ h1{
 }
 /*Banners*/
 .banner{
-    width: 100%;
-    display: block;
-    margin-top: 40px;
-    margin-left: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .banner img{
     width: 48%;
     padding-right: 15px;
     padding-left: 15px;
-    margin-bottom: 0px;
+
 }
 /*Marcas*/
 .slider-marcas{
@@ -269,8 +267,10 @@ h1{
 }
 /*Promociones*/
 .promociones{
-    display: inline-block;
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+        margin-top: 20px;
     margin-bottom: 40px;
 }
 .promociones img{
@@ -280,35 +280,20 @@ h1{
 }
 /* Seccion ropa*/
 .slider-ropa{
-    margin-top: 30px;
-
+    max-width: 1280px;
+    margin: auto;
     overflow: hidden;
 }
 .slider_images_ropa{
-    width: 100%;
     top: 20px;
     position: relative;
     left: 0px;
     transition: all .5s;
 }
 .slider-ronav{
-
     margin: 1em auto;
     display: flex;
     justify-content: center;
-}
-.slider-rop{
-    width: 10px;
-    height: 10px;
-    margin-left: 10px;
-    background: #992a2a ;
-    border-radius: 50%;
-}
-.slider-rop:hover{
-    background-color: #000;
-}
-.slider-rop-active{
-    background-color: #000;
 }
 .ropa-mod{
     display: inline-block;
@@ -328,13 +313,11 @@ h1{
 }
 /*Estilos*/
 .cnt-estilos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 30px;
     margin-bottom: 30px;
-}
-.cnt-estilos div {
-    display: inline-block;
-
-    margin-left: 2.5%;
 }
 .cnt-estilos div img{
     width: 24%;
@@ -343,14 +326,110 @@ h1{
 }
 /*    border: 3px solid saddlebrown;*/
 
-.newsletter{
+
+.newsletter{  
+    width: 100%;
     height: 110px;
     background: #191919;
-    padding-top: 10px;
-    padding-bottom: 10px;
     color: #fff;
 }
-.newsletter div{
+.news span{
+    display: inline-block;
+    font-size: 18px;
+    font-weight: 600;
+    color: #ffffff;
+    margin-left: 60px;
+    line-height: 110px;
+}
+.news a{
+    margin-left: 30px;
+    padding: 10px 35px;
+    background-color: #fff;
+    text-decoration: none;
+    color: #333;;
     text-align: center;
+    border-radius: 3px;
+    font-weight: 700;
+    
+}
+.news a:hover{
+    color: #333;
+    box-shadow: inset 0 0 5px rgb(129, 129, 129);
+}
 
+/*footer*/
+footer {
+    background: #F0F0F0;
+    color: #333;
+}
+.footer{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 14px;
+
+}
+.footer div{
+    margin-left: auto;
+    margin-right: auto;
+    width: 33%;
+}
+.ayuda{
+    flex: 0 0 25%;
+    max-width: 25%;
+    font-weight: bold;
+}
+.footer a {
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+    color: #333;
+    line-height: 2.0; }
+.footer a:hover{
+    color: #333;
+    text-decoration: underline;
+}
+.icon{
+    display: flex;
+}
+.icon div{
+    width: 100%;
+    text-align: end;
+}
+.icon i {
+    margin-left: 30px;
+
+}
+
+.legales{
+    border-color: #ddd;
+    color: #808080;
+    padding-top: 30px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 30px;
+    font-size: 14px;
+} 
+.leg{
+    display: flex;
+    flex-direction: row;
+}
+.legales span{
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-right: 15px;
+}
+.legales span a{
+    font-weight: bold;
+    color: #333;
+    text-transform: none;
+}
+.copyright{
+    padding: 0;
+    margin: 0;
 }
